# ogl

./: .gitignore  ogl.sln
ogldev/: BillboardList.cpp  BillboardList.hpp  BillboardShader.cpp  BillboardShader.hpp  CMakeLists.txt  CallbackInterface.hpp  Camera.cpp  Camera.hpp  CubeMapTexture.cpp  CubeMapTexture.hpp  EngineCommon.hpp  GLUTBackend.cpp  GlutBackEnd.hpp  LightTechnique.cpp  LightTechnique.cpp.C24507  LightTechnique.hpp  Mesh.cpp  Mesh.hpp  PSUpdateShader.cpp  PSUpdateShader.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Pipeline.cpp  Pipeline.hpp  RandomTexture.cpp  RandomTexture.hpp  ShadowMapFBO.cpp  ShadowMapFBO.hpp  ShadowMapTechnique.cpp  ShadowMapTechnique.hpp  SkyBox.cpp  SkyBox.hpp  SkyboxShader.cpp  SkyboxShader.hpp  Technique.cpp  Technique.hpp  Texture.cpp  Texture.hpp  Utils.hpp  main.cpp  (+6 more)
ogldev/Debug/: vc141.idb
ogldev/buffers/: GBuffer.cpp  GBuffer.hpp
ogldev/common/: LightsCommon.hpp
ogldev/import/: BasicMesh.cpp  BasicMesh.hpp  SkinnedMesh.cpp  SkinnedMesh.hpp
ogldev/interface/: RenderCallbackInterface.hpp
ogldev/shaders/: DSDirLightPassShader.cpp  DSDirLightPassShader.hpp  DSGeometryPassShader.cpp  DSGeometryPassShader.hpp  DSLightPassShader.cpp  DSLightPassShader.hpp  DSPointLightShader.cpp  DSPointLightShader.hpp  LightingShader.cpp  LightingShader.hpp  PickingShader.cpp  PickingShader.hpp  SimpleColorShader.cpp  SimpleColorShader.hpp  T38SkinnedShader.cpp  T38SkinnedShader.hpp  instance_light_vs.glsl  lighting_cs.glsl  lighting_es.glsl  lighting_fs.glsl  lighting_vs.glsl  t36_dir_light_pas_fs.glsl  t36_geometry_pass_fs.glsl  (+5 more)
(+15 files in other folders)
